--- a/js/carousel/carousel.html
+++ b/js/carousel/carousel.html
@@ -15,50 +15,51 @@
       window.onload = function () {
         /*
         carousel(".carousel", {
-          rolling: "repeat", // start-end, repeat
-          autoStart: { start: true, interval: 2000 },
+          rolling: "continuos", // start-end, repeat, continuos
+          autoStart: { start: true, interval: 3000 },
           showDots: true,
           showArrows: true,
         })
          */
-        carousel(".carousel");
+        carousel(".carousel-1");
+        carousel(".carousel-2");
       };
     </script>
   </head>
   <body>
-    <ul class="carousel" style="height: 500px">
-      <li>
-        <img src="image paths" />
+    <ul class="carousel carousel-1" style="height: 500px">
+      <li data-index="0">
+        <img src="images" />
       </li>
-      <li>
-        <img src="image paths" />
+      <li data-index="1">
+        <img src="images" />
       </li>
-      <li>
-        <img src="image paths" />
+      <li data-index="2">
+        <img src="images" />
       </li>
-      <li>
-        <img src="image paths" />
+      <li data-index="3">
+        <img src="images" />
       </li>
-      <li>
-        <img src="image paths" />
+      <li data-index="4">
+        <img src="images" />
       </li>
     </ul>
 
-    <ul class="carousel" style="height: 500px">
-      <li>
-        <img src="image paths" />
+    <ul class="carousel carousel-2" style="height: 500px">
+      <li data-index="0">
+        <img src="images" />
       </li>
-      <li>
-        <img src="image paths" />
+      <li data-index="1">
+        <img src="images" />
       </li>
-      <li>
-        <img src="image paths" />
+      <li data-index="2">
+        <img src="images" />
       </li>
-      <li>
-        <img src="image paths" />
+      <li data-index="3">
+        <img src="images" />
       </li>
-      <li>
-        <img src="image paths" />
+      <li data-index="4">
+        <img src="images" />
       </li>
     </ul>
   </body>
